--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/OrangutanJS/ojs-components#readme",
   "dependencies": {
-    "ojs-core": "latest"
+    "ojs-core": "^1.0.3"
   }
 }
