--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Module with input type components",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -13,7 +14,8 @@
   "keywords": [
     "ojs",
     "orangutanjs",
-    "oComponents"
+    "oComponents",
+    "ojs-components"
   ],
   "author": "Maciek Swiechowicz and Kacper Stodolak",
   "license": "MIT",
@@ -21,7 +23,17 @@
     "url": "https://github.com/OrangutanJS/ojs-components/issues"
   },
   "homepage": "https://github.com/OrangutanJS/ojs-components#readme",
-  "dependencies": {
-    "ojs-core": "^1.0.3"
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.3.0",
+    "ojs-core": "^1.1.0",
+    "ojs-view": "^1.1.0",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1"
   }
 }
