--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ojs-components",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Module with input type components",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,9 @@
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
     "ojs-core": "^1.1.0",
