oSelect documentation + fix

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "oComponents",
     "ojs-components"
   ],
-  "author": "Maciek Swiechowicz and Kacper Stodolak",
+  "author": "Maciek Swiechowicz (mswiechowicz)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/OrangutanJS/ojs-components/issues"
