--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ojs-components",
-  "version": "1.5.0",
-  "description": "Module with input type components",
-  "main": "index.js",
+  "version": "1.6.1",
+  "description": "Module with ready to use components",
+  "main": "public/components.js",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack serve"
+    "build": "webpack --config webpackConfig/public.config.js",
+    "dev": "webpack serve --config webpackConfig/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,9 @@
     "url": "https://github.com/OrangutanJS/ojs-components/issues"
   },
   "homepage": "https://github.com/OrangutanJS/ojs-components#readme",
+  "files" : [
+    "public/components.js"
+  ],
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
@@ -35,6 +38,7 @@
     "mini-css-extract-plugin": "^2.3.0",
     "ojs-core": "^1.3.0",
     "ojs-view": "^1.1.3",
+    "style-loader": "^3.3.0",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
