--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ojs-components",
-  "version": "1.6.1",
+  "version": "1.6.12",
   "description": "Module with ready to use components",
-  "main": "public/components.js",
+  "main": "npm/index.js",
   "scripts": {
-    "build": "webpack --config webpackConfig/public.config.js",
+    "build": "webpack --config webpackConfig/npm.webpack.config.js",
     "dev": "webpack serve --config webpackConfig/webpack.config.js"
   },
   "repository": {
@@ -23,8 +23,13 @@
     "url": "https://github.com/OrangutanJS/ojs-components/issues"
   },
   "homepage": "https://github.com/OrangutanJS/ojs-components#readme",
-  "files" : [
-    "public/components.js"
+  "files": [
+    "npm/index.js",
+    "npm/components/OInput.js",
+    "npm/components/OButton.js",
+    "npm/components/OSelect.js",
+    "npm/components/OCheckbox.js",
+    "npm/components/ORadio.js"
   ],
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -36,6 +41,7 @@
     "eslint-plugin-import": "^2.24.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
+    "ojs-components": "^1.6.12",
     "ojs-core": "^1.3.0",
     "ojs-view": "^1.1.3",
     "style-loader": "^3.3.0",
