--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "ojs-components",
-  "version": "1.6.14",
+  "version": "1.7.0",
   "description": "Module with ready to use components",
-  "main": "npm/index.js",
+  "source": "src/index.js",
+  "main": "npm/components.js",
+  "type": "module",
   "scripts": {
-    "build": "webpack --config webpackConfig/npm.webpack.config.js",
+    "build": "parcel build && css-minify -f ./npm/components.css -o ./npm",
+    "build-webpack": "webpack --config webpackConfig/npm.webpack.config.js",
     "dev": "webpack serve --config webpackConfig/webpack.config.js"
   },
   "repository": {
@@ -24,12 +27,10 @@
   },
   "homepage": "https://github.com/OrangutanJS/ojs-components#readme",
   "files": [
-    "npm/index.js",
-    "npm/components/OInput.js",
-    "npm/components/OButton.js",
-    "npm/components/OSelect.js",
-    "npm/components/OCheckbox.js",
-    "npm/components/ORadio.js"
+    "npm/components.js",
+    "npm/components.js.map",
+    "npm/components.css",
+    "npm/components.css.map"
   ],
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -41,12 +42,15 @@
     "eslint-plugin-import": "^2.24.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.3.0",
-    "ojs-components": "^1.6.13",
-    "ojs-core": "^1.3.0",
+    "ojs-components": "^1.6.14",
     "ojs-view": "^1.1.3",
+    "parcel": "^2.0.1",
     "style-loader": "^3.3.0",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.2.1"
+  },
+  "dependencies": {
+    "ojs-core": "^1.5.0"
   }
 }
